--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
                     <release>${java.version}</release>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -46,7 +48,7 @@
         <dependency>
             <groupId>com.github.han-yaeger</groupId>
             <artifactId>yaeger</artifactId>
-            <version>2021.2022.2</version>
+            <version>2021.2022.3</version>
         </dependency>
     </dependencies>
 </project>
